<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_form"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.primeservices.lazarskievent.FormActivity">

    <TextView android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/header"/>
    <EditText android:id="@+id/name_input"
        android:layout_below="@id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_input" />
    <EditText android:id="@+id/email_input"
        android:layout_below="@id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_input" />
    <EditText android:id="@+id/phone_input"
        android:layout_below="@id/email_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/phone_input" />
    <EditText android:id="@+id/address_input"
        android:layout_below="@id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_input" />

    <TextView android:id="@+id/checkbox_header_text"
        android:layout_below="@id/address_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="26dp"
        android:text="@string/checkbox_header_text"/>
    <CheckBox android:id="@+id/interest_eiz_checkbox"
        android:layout_below="@id/checkbox_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_eiz_checkbox"/>
    <CheckBox android:id="@+id/interest_wpia_checkbox"
        android:layout_below="@id/interest_eiz_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_wpia_checkbox"/>
    <CheckBox android:id="@+id/interest_m_checkbox"
        android:layout_below="@id/interest_wpia_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_m_checkbox"/>
    <CheckBox android:id="@+id/interest_sp_checkbox"
        android:layout_below="@id/interest_m_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_sp_checkbox"/>
    <CheckBox android:id="@+id/interest_pbpz_checkbox"
        android:layout_below="@id/interest_sp_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interest_pbpz_checkbox"/>

    <!-- -->
    <TextView android:id="@+id/checkbox_description_text"
        android:layout_below="@id/interest_pbpz_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/checkbox_description_text"/>
        <!-- -->
    <!--
    <WebView android:id="@+id/checkbox_description_text"
        android:layout_below="@id/interest_pbpz_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_description_text"/>
        -->

    <CheckBox android:id="@+id/agreement_1"
        android:layout_below="@id/checkbox_description_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/agreement_1"/>
    <CheckBox android:id="@+id/agreement_2"
        android:layout_below="@id/agreement_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/agreement_2"/>
    <CheckBox android:id="@+id/agreement_3"
        android:layout_below="@id/agreement_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="6dp"
        android:text="@string/agreement_3"/>
    <CheckBox android:id="@+id/agreement_4"
        android:layout_below="@id/agreement_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="16dp"
        android:text="@string/agreement_4"/>

    <Button android:id="@+id/submit_button"
        android:layout_below="@id/agreement_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button" />


    <!--<Button android:id="@+id/listAll_button"
        android:layout_below="@id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listAll_button"
        android:onClick="listAll"/>
        -->
</RelativeLayout>
</ScrollView>